tests/parsing/smtlib/v2.6/errors/062_declare-datatypes_bad_dt_def_1.expected
File "tests/parsing/smtlib/v2.6/errors/062_declare-datatypes_bad_dt_def_1.smt2", line 2, character 29-30:
2 | (declare-datatypes ((foo 0)) _)
                                 ^
Error while parsing a datatypes declaration, read the reserved word '_',
      but expected an opening parenthesis to start a list of datatype
      definitions, one for each of the sorts being declared.
